src/main/java/org/alpa/wjamec/pairings/antlr/PairingsParser.java
// Generated from Pairings.g4 by ANTLR 4.13.1
package org.alpa.wjamec.pairings.antlr;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue" })
public class PairingsParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int OPAR = 1, CPAR = 2, OBRK = 3, CBRK = 4, SLASH = 5, DASH = 6, TWO_DASHES = 7,
            FOUR_DASHES = 8, DASHES = 9, UNDERLINE = 10, COMMA = 11, COLON = 12, ASTERISK = 13, TWICE = 14,
            CAPITAL_LETTER = 15, LETTER = 16, DAYS_OF_WEEK = 17, WEEKDAY = 18, MONTH = 19, NAT = 20, NATREAL = 21,
            HOURS = 22, MINUTES = 23, TIME = 24, DURATION = 25, REPORT = 26, RELEASE = 27, TBD = 28, GROUND = 29,
            BASE = 30, BASE_IATA = 31, IATA = 32, PAIRING_ID = 33, PAIRING_ANNOTATION = 34, CREDIT_ANNOTATION = 35,
            TRIP = 36, TABLE_HEADER = 37, START = 38, EFFECTIVE = 39, EXCEPTIONS = 40, NO_EXCEPTIONS = 41,
            CHECKIN_DUTY = 42, DEADHEAD = 43, AIRLINE = 44, AIRCRAFT = 45, HOTEL = 46, TAFB = 47, CREDIT = 48,
            PERDIEM = 49, WORD = 50, WS = 51;
    public static final int RULE_pairings = 0, RULE_pairing = 1, RULE_header = 2, RULE_headline = 3,
            RULE_tableHeader = 4, RULE_preliminaryHeadline = 5, RULE_finalHeadline = 6, RULE_commonHeadline = 7,
            RULE_base = 8, RULE_baseIata = 9, RULE_tripNumber = 10, RULE_pairingId = 11, RULE_pairingAnnotation = 12,
            RULE_crew = 13, RULE_captains = 14, RULE_firstOfficers = 15, RULE_flightAttendants = 16,
            RULE_extraFlightAttendants = 17, RULE_daysOfWeek = 18, RULE_effectiveness = 19, RULE_period = 20,
            RULE_month = 21, RULE_dayOfMonth = 22, RULE_daysOfMonth = 23, RULE_dayToMonth = 24, RULE_exceptions = 25,
            RULE_withExceptions = 26, RULE_withoutExceptions = 27, RULE_contents = 28, RULE_content = 29,
            RULE_calendarWeek = 30, RULE_calendarMonthLetter = 31, RULE_calendarDaysOfMonth = 32,
            RULE_calendarDayOfMonth = 33, RULE_contentSeparator = 34, RULE_start = 35, RULE_checkin = 36,
            RULE_report = 37, RULE_checkinDuty = 38, RULE_checkout = 39, RULE_release = 40, RULE_checkoutDuty = 41,
            RULE_leg = 42, RULE_flightLeg = 43, RULE_groundLeg = 44, RULE_layover = 45, RULE_accommodation = 46,
            RULE_transportation = 47, RULE_layoverDurations = 48, RULE_phone = 49, RULE_flight = 50, RULE_ground = 51,
            RULE_deadhead = 52, RULE_airline = 53, RULE_aircraft = 54, RULE_origin = 55, RULE_destination = 56,
            RULE_out = 57, RULE_in = 58, RULE_block = 59, RULE_tog = 60, RULE_credit = 61, RULE_creditAnnotation = 62,
            RULE_layoverDuration = 63, RULE_transportationDuration = 64, RULE_restDuration = 65, RULE_hours = 66,
            RULE_time = 67, RULE_duration = 68, RULE_dutyDay = 69, RULE_weekday = 70, RULE_dayOfDuty = 71,
            RULE_footer = 72, RULE_footerSeparator = 73, RULE_summary = 74, RULE_tafbSummary = 75,
            RULE_creditSummary = 76, RULE_perdiemSummary = 77;

    private static String[] makeRuleNames() {
        return new String[] { "pairings", "pairing", "header", "headline", "tableHeader", "preliminaryHeadline",
                "finalHeadline", "commonHeadline", "base", "baseIata", "tripNumber", "pairingId", "pairingAnnotation",
                "crew", "captains", "firstOfficers", "flightAttendants", "extraFlightAttendants", "daysOfWeek",
                "effectiveness", "period", "month", "dayOfMonth", "daysOfMonth", "dayToMonth", "exceptions",
                "withExceptions", "withoutExceptions", "contents", "content", "calendarWeek", "calendarMonthLetter",
                "calendarDaysOfMonth", "calendarDayOfMonth", "contentSeparator", "start", "checkin", "report",
                "checkinDuty", "checkout", "release", "checkoutDuty", "leg", "flightLeg", "groundLeg", "layover",
                "accommodation", "transportation", "layoverDurations", "phone", "flight", "ground", "deadhead",
                "airline", "aircraft", "origin", "destination", "out", "in", "block", "tog", "credit",
                "creditAnnotation", "layoverDuration", "transportationDuration", "restDuration", "hours", "time",
                "duration", "dutyDay", "weekday", "dayOfDuty", "footer", "footerSeparator", "summary", "tafbSummary",
                "creditSummary", "perdiemSummary" };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] { null, "'('", "')'", "'['", "']'", "'/'", "'-'", "'--'", "'----'", null,
                "'____________________________________________________________________________________________________'",
                "','", "':'", "'*'", "'*2'", null, null, null, null, null, null, null, null, null, null, null, "'RPT'",
                "'RLS'", "'TBD'", null, null, null, null, null, null, null, "'TRIP #'",
                "'MO TU WE TH FR SA SU DAY FLT# DEP ARR DEP ARR BLK TOG DUTY CREDIT LO A/C CREW COMP'",
                "'----------- --- --- ----- ----- ----- ----- ----- --------- ----- --- ---------'", "'effective'",
                "'except'", "'no exceptions.'", null, null, null, null, null, "'TAFB'", "'Credit Time'", "'PERDIEM'" };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] { null, "OPAR", "CPAR", "OBRK", "CBRK", "SLASH", "DASH", "TWO_DASHES", "FOUR_DASHES",
                "DASHES", "UNDERLINE", "COMMA", "COLON", "ASTERISK", "TWICE", "CAPITAL_LETTER", "LETTER",
                "DAYS_OF_WEEK", "WEEKDAY", "MONTH", "NAT", "NATREAL", "HOURS", "MINUTES", "TIME", "DURATION", "REPORT",
                "RELEASE", "TBD", "GROUND", "BASE", "BASE_IATA", "IATA", "PAIRING_ID", "PAIRING_ANNOTATION",
                "CREDIT_ANNOTATION", "TRIP", "TABLE_HEADER", "START", "EFFECTIVE", "EXCEPTIONS", "NO_EXCEPTIONS",
                "CHECKIN_DUTY", "DEADHEAD", "AIRLINE", "AIRCRAFT", "HOTEL", "TAFB", "CREDIT", "PERDIEM", "WORD", "WS" };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Pairings.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public PairingsParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PairingsContext extends ParserRuleContext {

        public List<PairingContext> pairing() {
            return getRuleContexts(PairingContext.class);
        }

        public PairingContext pairing(int i) {
            return getRuleContext(PairingContext.class, i);
        }

        public PairingsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_pairings;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterPairings(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitPairings(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitPairings(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final PairingsContext pairings() throws RecognitionException {
        PairingsContext _localctx = new PairingsContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_pairings);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(159);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == BASE || _la == TRIP) {
                    {
                        {
                            setState(156);
                            pairing();
                        }
                    }
                    setState(161);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PairingContext extends ParserRuleContext {

        public HeaderContext header() {
            return getRuleContext(HeaderContext.class, 0);
        }

        public ContentsContext contents() {
            return getRuleContext(ContentsContext.class, 0);
        }

        public FooterContext footer() {
            return getRuleContext(FooterContext.class, 0);
        }

        public PairingContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_pairing;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterPairing(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitPairing(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitPairing(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final PairingContext pairing() throws RecognitionException {
        PairingContext _localctx = new PairingContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_pairing);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(162);
                header();
                setState(163);
                contents();
                setState(164);
                footer();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class HeaderContext extends ParserRuleContext {

        public HeadlineContext headline() {
            return getRuleContext(HeadlineContext.class, 0);
        }

        public TableHeaderContext tableHeader() {
            return getRuleContext(TableHeaderContext.class, 0);
        }

        public HeaderContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_header;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterHeader(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitHeader(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitHeader(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final HeaderContext header() throws RecognitionException {
        HeaderContext _localctx = new HeaderContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_header);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(166);
                headline();
                setState(167);
                tableHeader();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class HeadlineContext extends ParserRuleContext {

        public PreliminaryHeadlineContext preliminaryHeadline() {
            return getRuleContext(PreliminaryHeadlineContext.class, 0);
        }

        public FinalHeadlineContext finalHeadline() {
            return getRuleContext(FinalHeadlineContext.class, 0);
        }

        public HeadlineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_headline;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterHeadline(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitHeadline(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitHeadline(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final HeadlineContext headline() throws RecognitionException {
        HeadlineContext _localctx = new HeadlineContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_headline);
        try {
            setState(171);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
            case BASE:
                enterOuterAlt(_localctx, 1); {
                setState(169);
                preliminaryHeadline();
            }
                break;
            case TRIP:
                enterOuterAlt(_localctx, 2); {
                setState(170);
                finalHeadline();
            }
                break;
            default:
                throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TableHeaderContext extends ParserRuleContext {

        public TerminalNode TABLE_HEADER() {
            return getToken(PairingsParser.TABLE_HEADER, 0);
        }

        public TableHeaderContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_tableHeader;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterTableHeader(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitTableHeader(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitTableHeader(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final TableHeaderContext tableHeader() throws RecognitionException {
        TableHeaderContext _localctx = new TableHeaderContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_tableHeader);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(173);
                match(TABLE_HEADER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PreliminaryHeadlineContext extends ParserRuleContext {

        public BaseContext base() {
            return getRuleContext(BaseContext.class, 0);
        }

        public CommonHeadlineContext commonHeadline() {
            return getRuleContext(CommonHeadlineContext.class, 0);
        }

        public PreliminaryHeadlineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_preliminaryHeadline;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterPreliminaryHeadline(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitPreliminaryHeadline(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitPreliminaryHeadline(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final PreliminaryHeadlineContext preliminaryHeadline() throws RecognitionException {
        PreliminaryHeadlineContext _localctx = new PreliminaryHeadlineContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_preliminaryHeadline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(175);
                base();
                setState(176);
                commonHeadline();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FinalHeadlineContext extends ParserRuleContext {

        public TripNumberContext tripNumber() {
            return getRuleContext(TripNumberContext.class, 0);
        }

        public PairingIdContext pairingId() {
            return getRuleContext(PairingIdContext.class, 0);
        }

        public CommonHeadlineContext commonHeadline() {
            return getRuleContext(CommonHeadlineContext.class, 0);
        }

        public FinalHeadlineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_finalHeadline;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterFinalHeadline(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitFinalHeadline(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitFinalHeadline(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final FinalHeadlineContext finalHeadline() throws RecognitionException {
        FinalHeadlineContext _localctx = new FinalHeadlineContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_finalHeadline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(178);
                tripNumber();
                setState(179);
                pairingId();
                setState(180);
                commonHeadline();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CommonHeadlineContext extends ParserRuleContext {

        public PairingAnnotationContext pairingAnnotation() {
            return getRuleContext(PairingAnnotationContext.class, 0);
        }

        public CrewContext crew() {
            return getRuleContext(CrewContext.class, 0);
        }

        public BaseIataContext baseIata() {
            return getRuleContext(BaseIataContext.class, 0);
        }

        public DaysOfWeekContext daysOfWeek() {
            return getRuleContext(DaysOfWeekContext.class, 0);
        }

        public EffectivenessContext effectiveness() {
            return getRuleContext(EffectivenessContext.class, 0);
        }

        public CommonHeadlineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_commonHeadline;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterCommonHeadline(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitCommonHeadline(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitCommonHeadline(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final CommonHeadlineContext commonHeadline() throws RecognitionException {
        CommonHeadlineContext _localctx = new CommonHeadlineContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_commonHeadline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(182);
                pairingAnnotation();
                setState(183);
                crew();
                setState(184);
                baseIata();
                setState(185);
                daysOfWeek();
                setState(186);
                effectiveness();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BaseContext extends ParserRuleContext {

        public TerminalNode BASE() {
            return getToken(PairingsParser.BASE, 0);
        }

        public BaseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_base;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterBase(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitBase(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitBase(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final BaseContext base() throws RecognitionException {
        BaseContext _localctx = new BaseContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_base);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(188);
                match(BASE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BaseIataContext extends ParserRuleContext {

        public TerminalNode BASE_IATA() {
            return getToken(PairingsParser.BASE_IATA, 0);
        }

        public TerminalNode COLON() {
            return getToken(PairingsParser.COLON, 0);
        }

        public BaseIataContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_baseIata;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).enterBaseIata(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PairingsListener)
                ((PairingsListener) listener).exitBaseIata(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PairingsVisitor)
                return ((PairingsVisitor<? extends T>) visitor).visitBaseIata(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final BaseIataContext baseIata() throws RecognitionException {
        BaseIataContext _localctx = new BaseIataContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_baseIata);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(190);
                match(BASE_IATA);
                setState(191);
                match(COLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
